# GRXarid

./: .gitignore  README.md  info.txt  log.txt  logger.py  main.py  pyproject.toml  requirements.txt
core/: filter.py  telegram.py  token.py  xarid_parse.py  xarid_uzex_parse.py
grteamxaridbot/: __main__.py  bot.db  logger.py
grteamxaridbot/core/: filter.py  telegram.py  token.py  xarid_parse.py  xarid_uzex_parse.py
