[tool.poetry]
name = "grteamxaridbot"
version = "0.1.0"
description = "Telegram bot for parsing orders"
authors = ["GRTeamBoss <rabbitwow97@gmail.com>"]
license = "GPL v.2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^4.10.0"
requests = "^2.28.2"
openpyxl = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
